--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,38 +2,41 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+
   "dependencies": {
     "@craco/craco": "^7.1.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
 
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.13.0",
+
+    "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3",
 
     "react-scripts": "5.0.1",
 
     "date-fns": "^3.6.0",
     "react-day-picker": "8.10.1",
 
-    "ajv": "^6.12.6",
-    "ajv-keywords": "^3.5.2",
+    "ajv": "6.12.6",
+    "ajv-keywords": "3.5.2",
 
     "web-vitals": "^2.1.4"
   },
+
   "scripts": {
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
   },
+
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
   },
+
   "browserslist": {
     "production": [
       ">0.2%",
@@ -46,7 +49,9 @@
       "last 1 safari version"
     ]
   },
+
   "overrides": {
-    "ajv": "^6.12.6"
+    "ajv": "6.12.6",
+    "schema-utils": "3.3.0"
   }
 }
