--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
 
     "ajv": "6.12.6",
     "ajv-keywords": "3.5.2",
+    "schema-utils": "3.3.0",
 
     "web-vitals": "^2.1.4"
   },
@@ -52,6 +53,7 @@
 
   "overrides": {
     "ajv": "6.12.6",
+    "ajv-keywords": "3.5.2",
     "schema-utils": "3.3.0"
   }
 }
