--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "ajv": "6.12.6",
     "ajv-keywords": "3.5.2",
     "schema-utils": "3.3.0",
+    "terser-webpack-plugin": "5.3.9",
 
     "web-vitals": "^2.1.4"
   },
@@ -54,6 +55,7 @@
   "overrides": {
     "ajv": "6.12.6",
     "ajv-keywords": "3.5.2",
-    "schema-utils": "3.3.0"
+    "schema-utils": "3.3.0",
+    "terser-webpack-plugin": "5.3.9"
   }
 }
