--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,61 +1,26 @@
 {
   "name": "frontend",
-  "version": "0.1.0",
   "private": true,
-
-  "dependencies": {
-    "@craco/craco": "^7.1.0",
-
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-
-    "react-router": "^6.22.3",
-    "react-router-dom": "^6.22.3",
-
-    "react-scripts": "5.0.1",
-
-    "date-fns": "^3.6.0",
-    "react-day-picker": "8.10.1",
-
-    "ajv": "6.12.6",
-    "ajv-keywords": "3.5.2",
-    "schema-utils": "3.3.0",
-    "terser-webpack-plugin": "5.3.9",
-
-    "web-vitals": "^2.1.4"
-  },
+  "version": "1.0.0",
+  "type": "module",
 
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
 
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
+    "date-fns": "^3.6.0",
+    "react-day-picker": "8.10.1",
+    "sonner": "^1.4.0"
   },
 
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-
-  "overrides": {
-    "ajv": "6.12.6",
-    "ajv-keywords": "3.5.2",
-    "schema-utils": "3.3.0",
-    "terser-webpack-plugin": "5.3.9"
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.0.12"
   }
 }
