--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,13 +14,22 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "axios": "^1.8.4",
     "date-fns": "^3.6.0",
     "react-day-picker": "8.10.1",
-    "sonner": "^1.4.0"
+    "sonner": "^2.0.3",
+    "embla-carousel-react": "^8.6.0",
+    "lucide-react": "^0.507.0",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^3.2.0",
+    "zod": "^3.24.4"
   },
 
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.12"
+    "vite": "^5.0.12",
+    "tailwindcss": "^3.4.17",
+    "postcss": "^8.4.49",
+    "autoprefixer": "^10.4.20"
   }
 }
